Added comments for index

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>My Website</title>
 </head>
 <body>
+<!--H1-->
 <h1>Hello World</h1>
 
+<!--Card-->
 <div class="card" style="width: 18rem;">
     <img src="..." class="card-img-top" alt="...">
     <div class="card-body">
@@ -16,7 +18,7 @@
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
-  </div>
+</div>
     
 </body>
 </html>
